html/objects/_flag.scss
// ==========================================================================
// Flag Object
// ==========================================================================

////
/// @group flag
////

.sprk-o-Flag {
  display: flex;
}

.sprk-o-Flag__figure {
  padding-right: $sprk-flag-gutter;
}

.sprk-o-Flag__body {
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: 0;

  > :last-child,
  & {
    margin-bottom: 0;
  }
}

/// Reverses the flag and places the
/// image on the right of the body content.
.sprk-o-Flag--rev {
  flex-direction: row-reverse;

  > .sprk-o-Flag__figure {
    padding-right: 0;
    padding-left: $sprk-flag-gutter;
  }
}

/// Removes gutter.
.sprk-o-Flag--flush {
  > .sprk-o-Flag__figure {
    padding-right: 0;
    padding-left: 0;
  }
}

/// Adds extra small gutter. (Default 4px)
.sprk-o-Flag--tiny {
  > .sprk-o-Flag__figure {
    padding-right: $sprk-flag-gutter-tiny;
  }

  &.sprk-o-Flag--rev {
    > .sprk-o-Flag__figure {
      padding-right: 0;
      padding-left: $sprk-flag-gutter-tiny;
    }
  }
}

/// Adds small gutter. (Default 8px)
.sprk-o-Flag--small {
  > .sprk-o-Flag__figure {
    padding-right: $sprk-flag-gutter-small;
  }

  &.sprk-o-Flag--rev {
    > .sprk-o-Flag__figure {
      padding-right: 0;
      padding-left: $sprk-flag-gutter-small;
    }
  }
}

/// Adds large gutter. (Default 32px)
.sprk-o-Flag--large {
  > .sprk-o-Flag__figure {
    padding-right: $sprk-flag-gutter-large;
  }

  &.sprk-o-Flag--rev {
    > .sprk-o-Flag__figure {
      padding-right: 0;
      padding-left: $sprk-flag-gutter-large;
    }
  }
}

/// Adds extra large gutter. (Default 64px)
.sprk-o-Flag--huge {
  > .sprk-o-Flag__figure {
    padding-right: $sprk-flag-gutter-huge;
  }

  &.sprk-o-Flag--rev {
    > .sprk-o-Flag__figure {
      padding-right: 0;
      padding-left: $sprk-flag-gutter-huge;
    }
  }
}

/// Vertically align content to the middle.
.sprk-o-Flag--middle {
  > .sprk-o-Flag__body,
  > .sprk-o-Flag__figure {
    align-items: center;
  }
}

/// Vertically align content to the bottom.
.sprk-o-Flag--bottom {
  > .sprk-o-Flag__body,
  > .sprk-o-Flag__figure {
    align-items: flex-end;
  }
}

@media all and (max-width: $sprk-flag-stacked-breakpoint) {

  /// Stacked flag at smaller screen width.
  .sprk-o-Flag--stacked {
    flex-direction: column;

    > .sprk-o-Flag__figure {
      padding-right: 0;
      padding-left: 0;
      margin-bottom: $sprk-flag-gutter;
    }

    //
    // Tiny stacked flag
    //
    &.sprk-o-Flag--tiny {
      > .sprk-o-Flag__figure {
        padding-right: 0;
        padding-left: 0;
        margin-bottom: $sprk-flag-gutter-tiny;
      }
    }

    //
    // Small stacked flag
    //
    &.sprk-o-Flag--small {
      > .sprk-o-Flag__figure {
        padding-right: 0;
        padding-left: 0;
        margin-bottom: $sprk-flag-gutter-small;
      }
    }

    //
    // Large stacked flag
    //
    &.sprk-o-Flag--large {
      > .sprk-o-Flag__figure {
        padding-right: 0;
        padding-left: 0;
        margin-bottom: $sprk-flag-gutter-large;
      }
    }

    //
    // Huge stacked flag
    //
    &.sprk-o-Flag--huge {
      > .sprk-o-Flag__figure {
        padding-right: 0;
        padding-left: 0;
        margin-bottom: $sprk-flag-gutter-huge;
      }
    }
  }
}

